# corona_travel

./: README.md  Value proposition canvas.drawio  class_candidates.md
Task-Structured_program_design/: solution.py
Task10/: Task 10. Technologies.pptx
Task10/stack1_impl/hackaton-main/: .env  .gitignore  Containerfile  README.md  compose.yaml  mongo-init.js  pyproject.toml
Task10/stack1_impl/hackaton-main/src/facts/: app.py  settings.py  types.py
Task10/stack1_impl/hackaton-main/src/hackaton/: __init__.py  app.py  settings.py
Task10/stack1_impl/hackaton-main/src/map_2D/: app.py  settings.py  types.py
Task10/stack1_impl/hackaton-main/src/map_3D/: app.py  settings.py  types.py
Task10/stack1_impl/hackaton-main/src/places/: app.py  settings.py  types.py
Task10/stack1_impl/hackaton-main/tests/: test_hackaton.py
Task10/stack2_impl/Corona/: pom.xml
Task10/stack2_impl/Corona/src/main/java/app/corona_travel/config/: ConfigSpring.java  DispatcherInitializer.java
Task10/stack2_impl/Corona/src/main/java/app/corona_travel/controllers/: MarkerController.java
Task10/stack2_impl/Corona/src/main/java/app/corona_travel/dao/: dao.java
Task11/: Task 11. Data design.pptx
Task12/: Task 12. Detailed design (1).pptx  Task 12. Detailed design.pptx
Task13/: Task 13. Full design.pptx
Task5/: Task 5. Domain modeling.pptx
Task6/: Task 6. Domain modeling - 2.pptx
Task7/: Копия Task 7. Full analysis.pptx
Task8/: Task 8. Resources and microservices.pptx
Task9/: README.md  Task 9. API Design (1).pptx  Task 9. API Design.pptx  openapi.yaml
