[tool.poetry]
name = "hackaton"
version = "0.1.0"
description = ""
authors = ["unrndm <unrndm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
reusable_mongodb_connection = { git = "https://github.com/Corona-Travel/reusable_mongodb_connection.git", branch = "main" }
uvicorn = "^0.15.0"
httpx = "^0.21.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pymongo = "^3.12.1"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
